--- a/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
@@ -28,7 +28,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Listens Left: 3" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceb-tt-iXm">
-                                <rect key="frame" x="80" y="69" width="293" height="30"/>
+                                <rect key="frame" x="219.66666666666663" y="69" width="153.33333333333337" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="LRE-l0-hrf"/>
                                 </constraints>
@@ -151,11 +151,22 @@
                                     <constraint firstAttribute="height" constant="150" id="20L-b2-pVq"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soru" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7kG-mN-sf6">
+                                <rect key="frame" x="178.66666666666666" y="69" width="36" height="30"/>
+                                <color key="tintColor" name="royalBlue"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="gUO-kW-Vjf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="backDarkBlue"/>
                         <constraints>
                             <constraint firstItem="dbA-0d-iSp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="1T8-lH-Lbb"/>
+                            <constraint firstItem="7kG-mN-sf6" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="7eq-W2-Ohi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fwL-us-7d6" secondAttribute="trailing" constant="30" id="9qm-Ea-lLv"/>
                             <constraint firstItem="VHP-xP-9vu" firstAttribute="top" secondItem="sPQ-dE-yfc" secondAttribute="bottom" constant="20" id="ABK-Ur-8jI"/>
                             <constraint firstItem="caZ-Ja-sSi" firstAttribute="top" secondItem="WwE-e0-b4n" secondAttribute="bottom" constant="10" id="AWD-s1-Gve"/>
@@ -168,12 +179,13 @@
                             <constraint firstItem="y2M-VA-kDS" firstAttribute="top" secondItem="caZ-Ja-sSi" secondAttribute="bottom" constant="10" id="NPD-ps-6Ua"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sPQ-dE-yfc" secondAttribute="trailing" constant="20" id="Og8-Ao-lqw"/>
                             <constraint firstItem="VHP-xP-9vu" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="OjY-89-x79"/>
-                            <constraint firstItem="ceb-tt-iXm" firstAttribute="leading" secondItem="Jh1-HN-l2N" secondAttribute="trailing" constant="20" id="Pe1-sU-QAt"/>
+                            <constraint firstItem="ceb-tt-iXm" firstAttribute="leading" secondItem="7kG-mN-sf6" secondAttribute="trailing" constant="5" id="Pe1-sU-QAt"/>
                             <constraint firstItem="fwL-us-7d6" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="SiS-r6-bhZ"/>
                             <constraint firstItem="sPQ-dE-yfc" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="UED-o3-Ln8"/>
                             <constraint firstItem="caZ-Ja-sSi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="YKa-3n-EZW"/>
                             <constraint firstItem="y2M-VA-kDS" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="YL3-5l-JAz"/>
                             <constraint firstItem="dbA-0d-iSp" firstAttribute="top" secondItem="VHP-xP-9vu" secondAttribute="bottom" id="c4R-iz-XUE"/>
+                            <constraint firstItem="7kG-mN-sf6" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="eTy-Po-k43"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="caZ-Ja-sSi" secondAttribute="trailing" constant="20" id="f6K-a7-poL"/>
                             <constraint firstItem="WwE-e0-b4n" firstAttribute="top" secondItem="sPQ-dE-yfc" secondAttribute="bottom" constant="10" id="fSX-mb-eqe"/>
                             <constraint firstItem="WwE-e0-b4n" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="iU1-RI-FXs"/>
@@ -196,6 +208,7 @@
                         <outlet property="customContinueView" destination="5DS-Jm-f3J" id="giV-hM-zEq"/>
                         <outlet property="listensLeftLabel" destination="ceb-tt-iXm" id="0Cv-cg-EhC"/>
                         <outlet property="lottieView" destination="VHP-xP-9vu" id="FN9-Ai-qU5"/>
+                        <outlet property="questionNumber" destination="7kG-mN-sf6" id="P4E-G6-Vru"/>
                         <outlet property="tapToSoundImageLabel" destination="dbA-0d-iSp" id="A7s-YE-TOP"/>
                     </connections>
                 </viewController>
@@ -219,6 +232,9 @@
         </namedColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
