--- a/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
@@ -27,11 +27,10 @@
                                                 <rect key="frame" x="8" y="8" width="345" height="321"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fld-Au-PDt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="345" height="475.33333333333331"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="345" height="321"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGT-TG-VRA">
-                                                                <rect key="frame" x="0.0" y="0.0" width="345" height="475.33333333333331"/>
-                                                                <string key="text">Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum. Benim adım Ali. On dokuz yaşındayım. Ankara’da yaşıyorum. Üniversite öğrencisiyim. Sabah saat sekizde uyanırım. Kahvaltı yaparım ve okula giderim. Okul saat dokuzda başlar. Öğleden sonra kütüphanede ders çalışırım. Akşam yemeğinden sonra kitap okurum veya televizyon izlerim. Hafta sonları genellikle arkadaşlarımla buluşurum.</string>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGT-TG-VRA">
+                                                                <rect key="frame" x="0.0" y="0.0" width="345" height="321"/>
                                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                                 <color key="textColor" name="porcelain"/>
                                                                 <nil key="highlightedColor"/>
@@ -40,6 +39,7 @@
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="qGT-TG-VRA" firstAttribute="leading" secondItem="Fld-Au-PDt" secondAttribute="leading" id="3bo-t9-Ox3"/>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="321" id="DXb-T7-ec1"/>
                                                             <constraint firstItem="qGT-TG-VRA" firstAttribute="top" secondItem="Fld-Au-PDt" secondAttribute="top" id="UYg-qO-dXg"/>
                                                             <constraint firstAttribute="bottom" secondItem="qGT-TG-VRA" secondAttribute="bottom" id="Zgk-08-Z0F"/>
                                                             <constraint firstAttribute="trailing" secondItem="qGT-TG-VRA" secondAttribute="trailing" id="eEI-kh-DY8"/>
@@ -68,7 +68,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dC-As-IGx">
                                         <rect key="frame" x="0.0" y="337" width="361" height="337"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SorusorusosrusorsursosruSorusorusosrusorsursosruSorusorusosrusorsursosru" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TGQ-2m-l1I">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TGQ-2m-l1I">
                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="40"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
@@ -163,10 +163,10 @@
                                 </connections>
                             </button>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENA-lG-739" customClass="CustomContinueView" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="718" width="393" height="100"/>
+                                <rect key="frame" x="0.0" y="702" width="393" height="150"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="OeW-H3-ULL"/>
+                                    <constraint firstAttribute="height" constant="150" id="OeW-H3-ULL"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -174,7 +174,7 @@
                         <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
                             <constraint firstItem="CtN-zR-ZsB" firstAttribute="top" secondItem="0Ch-zo-uFi" secondAttribute="bottom" constant="10" id="1kF-Tb-3Vf"/>
-                            <constraint firstItem="ENA-lG-739" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="FV2-ad-08Z"/>
+                            <constraint firstItem="ENA-lG-739" firstAttribute="bottom" secondItem="5EZ-qb-Rvc" secondAttribute="bottom" id="FV2-ad-08Z"/>
                             <constraint firstItem="CtN-zR-ZsB" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="II4-Am-VSd"/>
                             <constraint firstItem="ENA-lG-739" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="W3D-Yw-h5V"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0Ch-zo-uFi" secondAttribute="trailing" constant="16" id="aN4-LB-tco"/>
@@ -191,6 +191,8 @@
                         <outlet property="backButton" destination="Ipu-xd-vvc" id="U0Q-YG-fbn"/>
                         <outlet property="checkButton" destination="CtN-zR-ZsB" id="oRH-bk-8v1"/>
                         <outlet property="continueButton" destination="ENA-lG-739" id="7kF-1p-N5N"/>
+                        <outlet property="passageLabel" destination="qGT-TG-VRA" id="nYR-Be-e4h"/>
+                        <outlet property="questionLabel" destination="TGQ-2m-l1I" id="c9z-i6-QEj"/>
                         <outlet property="tableView" destination="4bH-jg-GvT" id="DcK-yk-Eq0"/>
                     </connections>
                 </viewController>
